--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "parcel-bundler": "1.12.5"
+  },
   "devDependencies": {
     "@babel/core": "7.2.0",
     "typescript": "4.4.4"
