--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aplicaco-to-do-list",
+  "name": "aplicaco-to-do-list-js-vanilla",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
